Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107047

TypePropagator cannot handle optional chaining call

    XMLWordPrintable

Details

    • f693fb3d1b (qt/qtdeclarative/dev) f693fb3d1b (qt/tqtc-qtdeclarative/dev)

    Description

      The attached example triggers an assert when running qmllint/cachegen/etc.

      ASSERT: "it != registers.end()" in file qtdeclarative/src/qmlcompiler/qqmljscompilepass_p.h, line 80

      The reason seems to be that StoreReg seems to expect that the Accumulator contains a value, but that's not set up when using optional chaining.

      Attachments

        For Gerrit Dashboard: QTBUG-107047
        # Subject Branch Project Status CR V

        Activity

          People

            fabiankosmale Fabian Kosmale
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes