Do not store the accumulator in optional chaining call

There are two cases:
- Either the optional value is nullish, then we overwrite the
  accumulator with undefined, or
- the value is not nullish, in which case we do a call. None of the call
  instructions read the accumulator, and all of them overwrite it.

So in both cases we do not need the current value in the accumulator,
and can thus skip saving and restoring it.

Fixes: QTBUG-107047
Pick-to: 6.4
Change-Id: I620e525d59990a5d7a0af15e2ee48795163c6575
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>