tests/auto/qml/qmllint/data/optionalChainingCall.qml
@@ -1,0 +1,9 @@
+import QtQuick 2.0
+
+MouseArea {
+     id: ma
+     function f() {}
+     onClicked: {
+         f?.()
+     }
+}
